[package]
name = "rpid"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Rust Programmable Interface for Domain-Independent Dynamic Programming (RPID)"
license = "MIT OR Apache-2.0"
authors = ["Ryo Kuroiwa <kuroiwa@nii.ac.jp>"]
repository = "https://github.com/domain-independent-dp/rpid"

[dependencies]
rustc-hash = "2.1"
smallvec = "1.15"
num-traits = "0.2"
itertools = "0.14"

[dev-dependencies]
fixedbitset = "0.5"
approx = "0.5"
