[package]
name = "rpid"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust Programmable Interface for Domain-Independent Dynamic Programming (RPID)"
license = "MIT OR Apache-2.0"
authors = ["Ryo Kuroiwa <kuroiwa@nii.ac.jp>"]
repository = "https://github.com/domain-independent-dp/rpid"

[dependencies]
rustc-hash = "2.1"
smallvec = "1.15"
num-traits = "0.2"
itertools = "0.14"
ordered-float = "5.0"

[dev-dependencies]
fixedbitset = "0.5"
approx = "0.5"
